--- a/render.yaml
+++ b/render.yaml
@@ -4,6 +4,7 @@ services:
     env: node
     buildCommand: npm install && npm run build
     startCommand: npm start
+    publishDirectory: dist/client
     envVars:
       - key: NODE_ENV
         value: production
