--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,51 @@
+# Dependencies
 node_modules
+.pnp
+.pnp.js
+
+# Production
 dist
-.DS_Store
+build
 server/public
+
+# Testing
+coverage
+
+# Environment files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Debug logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# TypeScript
+*.tsbuildinfo
 vite.config.ts.*
+
+# Misc
+*.log
 *.tar.gz
+.cache
