--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,10 +21,10 @@ jobs:
         run: npm install
 
       - name: Build
-        run: npm run build
+        run: npm run build:client
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          folder: dist/client
+          folder: dist
           branch: gh-pages 
