--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development DATABASE_URL=postgresql://postgres:postgres@localhost:5432/websocketchat AWS_ACCESS_KEY_ID=test AWS_SECRET_ACCESS_KEY=test AWS_REGION=us-east-1 AWS_BUCKET_NAME=test tsx server/index.ts",
     "build": "npm run build:client && npm run build:server",
-    "build:client": "vite build --config vite.config.js",
+    "build:client": "vite build",
     "build:server": "esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist/server",
     "start": "node dist/server/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push",
+    "preview": "vite preview",
     "postinstall": "npm run build"
   },
   "dependencies": {
