Simplify configuration for Vercel deployment

--- a/vercel.json
+++ b/vercel.json
@@ -3,17 +3,5 @@
     { "source": "/(.*)", "destination": "/index.html" }
   ],
   "buildCommand": "npm run build:client",
-  "outputDirectory": "dist",
-  "framework": "vite",
-  "headers": [
-    {
-      "source": "/(.*)",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "s-maxage=1, stale-while-revalidate"
-        }
-      ]
-    }
-  ]
+  "outputDirectory": "dist"
 } 
