--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@aws-sdk/s3-request-presigner": "^3.787.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@hookform/resolvers": "^3.10.0",
+    "@hookform/resolvers": "^5.1.1",
     "@jridgewell/trace-mapping": "^0.3.25",
     "@mui/material": "^7.0.2",
     "@neondatabase/serverless": "^0.10.4",
@@ -67,17 +67,17 @@
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
-    "drizzle-orm": "^0.42.0",
-    "drizzle-zod": "^0.7.0",
+    "drizzle-orm": "^0.44.2",
+    "drizzle-zod": "^0.8.2",
     "embla-carousel-react": "^8.6.0",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "framer-motion": "^11.13.1",
     "input-otp": "^1.4.2",
     "jsonwebtoken": "^9.0.2",
-    "lucide-react": "^0.501.0",
+    "lucide-react": "^0.523.0",
     "memorystore": "^1.6.7",
-    "multer": "^1.4.5-lts.2",
+    "multer": "^2.0.0",
     "next-themes": "^0.4.6",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
@@ -119,12 +119,12 @@
     "@vitejs/plugin-react": "^4.3.2",
     "autoprefixer": "^10.4.20",
     "cross-env": "^7.0.3",
-    "drizzle-kit": "^0.30.6",
-    "esbuild": "^0.25.0",
+    "drizzle-kit": "^0.31.3",
+    "esbuild": "^0.25.5",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.17",
     "tsx": "^4.19.1",
-    "typescript": "5.6.3",
+    "typescript": "^5.8.3",
     "vite": "^5.4.14"
   },
   "optionalDependencies": {
