--- a/.env
+++ b/.env
@@ -1,17 +1,9 @@
-﻿# Configuración de la base de datos PostgreSQL
+# Configuración de la base de datos PostgreSQL
 DATABASE_URL=postgresql://postgres:postgres@localhost:5432/portal_estudiante
 
 # Configuración del servidor
 NODE_ENV=development
 JWT_SECRET=temporal_secret_key_please_change
 
-# Configuración de Google Drive OAuth
-GOOGLE_CLIENT_ID=tu_google_client_id
-GOOGLE_CLIENT_SECRET=tu_google_client_secret
-GOOGLE_DRIVE_FOLDER_ID=1eNzgB8aXSraFEPCTWd9Dp1HmESe0ob3G
-
 # Configuración de CORS
 CORS_ORIGIN=http://localhost:3000
-
-# Configuración de archivos
-MAX_FILE_SIZE=10485760
