Depuración de código y actualización de funciones

--- a/env.example
+++ b/env.example
@@ -1,14 +1,12 @@
-# Configuración de la base de datos PostgreSQL
+# Configuración de la base de datos
 DATABASE_URL=postgresql://postgres:postgres@localhost:5432/portal_estudiante
+
+# Configuración de JWT
+JWT_SECRET=tu_clave_secreta_muy_segura_aqui
 
 # Configuración del servidor
 NODE_ENV=development
 PORT=3000
-JWT_SECRET=temporal_secret_key_please_change
-
-# Configuración de CORS
-CORS_ORIGIN=http://localhost:3000
-
 
 # Configuración de email (para producción)
 EMAIL_USER=tu_email@gmail.com
