--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "test:document-upload": "tsx server/test-document-upload.js"
   },
   "dependencies": {
-
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@hookform/resolvers": "^5.1.1",
@@ -60,7 +59,9 @@
     "@types/cors": "^2.8.17",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/multer": "^1.4.12",
+    "@types/nodemailer": "^6.4.17",
     "@types/pg": "^8.11.13",
+    "@types/uuid": "^10.0.0",
     "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
@@ -80,6 +81,7 @@
     "lucide-react": "^0.523.0",
     "multer": "^2.0.1",
     "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.5",
     "pg": "^8.14.1",
     "postgres": "^3.4.5",
     "react": "^18.3.1",
@@ -94,6 +96,7 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.2.5",
+    "uuid": "^11.1.0",
     "vaul": "^1.1.2",
     "vercel": "^44.2.13",
     "wouter": "^3.3.5",
