--- a/package.json
+++ b/package.json
@@ -57,10 +57,13 @@
     "@types/axios": "^0.9.36",
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
+    "@types/exceljs": "^0.5.3",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/multer": "^1.4.12",
     "@types/nodemailer": "^6.4.17",
+    "@types/pdfkit": "^0.17.2",
     "@types/pg": "^8.11.13",
+    "@types/socket.io": "^3.0.1",
     "@types/uuid": "^10.0.0",
     "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
@@ -73,6 +76,7 @@
     "drizzle-orm": "^0.44.2",
     "drizzle-zod": "^0.8.2",
     "embla-carousel-react": "^8.6.0",
+    "exceljs": "^4.4.0",
     "express": "^4.21.2",
     "framer-motion": "^11.13.1",
     "googleapis": "^150.0.1",
@@ -82,6 +86,7 @@
     "multer": "^2.0.1",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.5",
+    "pdfkit": "^0.17.1",
     "pg": "^8.14.1",
     "postgres": "^3.4.5",
     "react": "^18.3.1",
@@ -92,6 +97,7 @@
     "react-resizable-panels": "^2.1.7",
     "react-router-dom": "^7.5.1",
     "recharts": "^2.15.2",
+    "socket.io": "^4.8.1",
     "sonner": "^2.0.3",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
@@ -101,6 +107,7 @@
     "vercel": "^44.2.13",
     "wouter": "^3.3.5",
     "ws": "^8.18.0",
+    "xlsx": "^0.18.5",
     "zod": "^3.24.2",
     "zod-validation-error": "^3.4.0"
   },
